# simple-RAG-history-aware

./: README.md  ingestion_pipeline.py  pyproject.toml  retrieval_pipeline.py
db/chroma_basic_db/06cb585d-2e1c-4b56-bcfe-57f0b49215e2/: index_metadata.pickle
